# td-shooter-rs

./: README.md
client/: Cargo.toml
client/src/: camera.rs  client.rs  entity.rs  level.rs  lib.rs  main.rs  particle_system.rs
client/src/effect/: laser.rs  laser_beam.rs  laser_beam_hit.rs  mod.rs  particle_system.rs  screen_flash.rs
client/src/effect/particle/: mod.rs
client/src/level/: cached_light_source.rs  light_source.rs  mod.rs
client/src/renderer/: mod.rs  shapes.rs  stencil.rs
editor/: Cargo.toml  map.toml
editor/src/: main.rs
renderer/: Cargo.toml
renderer/src/: data.rs  lib.rs  pipeline.rs  texture.rs  util.rs
renderer/src/shape/: circle.rs  circle_arc.rs  light_polygon.rs  line.rs  mod.rs  polygon.rs  util.rs
server/: Cargo.toml
server/src/: entity.rs  laser_beam.rs  lib.rs  main.rs  server.rs
shared/: Cargo.toml
shared/src/: action.rs  collision.rs  color.rs  level.rs  lib.rs  timer.rs  util.rs
shared/src/entity/: mod.rs
shared/src/entity/player/: data.rs  entity.rs  input.rs  mod.rs  position.rs
shared/src/level/: collision.rs  light_source.rs  mod.rs  spawn.rs  visibility.rs  wall.rs
