[package]
name = "client"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
piston = "0.26.0"
piston2d-graphics = "0.19.0"

clap = "*"
rand = "*"
clock_ticks = "*"

shared = { path = "../shared", version = "0.1.0" }
server = { path = "../server", version = "0.1.0", optional = true }
renderer = { path = "../renderer", version = "0.1.0"  }
netsync = { path = "../deps/netsync", version = "0.1.0" }
hexahydrate = { path = "../deps/hexahydrate", version = "0.1.0" }
cobalt = { git = "https://github.com/bonsaiden/cobalt-rs.git", rev = "server_stream" }
clippy = { version = "*", optional = true }

[features]
loopback = ["server"]
default = ["loopback"]
lint = ["clippy"]

