[package]
name = "server"
version = "0.1.0"
authors = ["Ivo Wetzel <ivo.wetzel@googlemail.com>"]

[dependencies]
shared = { path = "../shared", version = "0.1.0" }
netsync = { path = "../deps/netsync", version = "0.1.0" }
hexahydrate = { path = "../deps/hexahydrate", version = "0.1.0" }
cobalt = { git = "https://github.com/bonsaiden/cobalt-rs.git", rev = "server_stream" }

clap = "*"
rand = "*"
clock_ticks = "*"
clippy = { version = "*", optional = true }

[features]
lint = ["clippy"]

